# docker-rust-example

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
