[package]
name = "docker-for-rust-project"
version = "0.1.0"
authors = ["Rodgers <cptrodgers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { git = "ssh://git@github.com/rust-random/rand", branch = "0.3"}
